--- a/sass/layout/_tabbar.scss
+++ b/sass/layout/_tabbar.scss
@@ -5,14 +5,11 @@
   width: 100%;
   margin: 0 auto;
   padding: 1rem;
+  z-index: 99;
   box-shadow: 0px -2px 13px 0px rgba($color-black, 0.2);
 
   .material-icons {
-    background-image: linear-gradient(
-      to right bottom,
-      rgba($color-primary-light, 0.8),
-      rgba($color-primary-dark, 0.8)
-    );
+    background-image: linear-gradient(to right bottom, rgba($color-primary-light, 0.8), rgba($color-primary-dark, 0.8));
     -webkit-background-clip: text;
     color: transparent;
     display: inline-block;
